[gd_scene load_steps=12 format=3 uid="uid://bmm8jhap3w46g"]

[ext_resource type="PackedScene" uid="uid://cclaghjo3ld4x" path="res://scenes/dialog_box.tscn" id="1_nt7q6"]
[ext_resource type="Script" uid="uid://c8g5uqtgagph7" path="res://scenes/v_flow_container.gd" id="2_vdcm2"]
[ext_resource type="PackedScene" uid="uid://c5iruah5popoh" path="res://listitem.tscn" id="2_x4jx1"]
[ext_resource type="Script" uid="uid://o3of7isoyryw" path="res://scenes/soil_management.gd" id="3_gdt2y"]
[ext_resource type="Texture2D" uid="uid://c6d2g2qvqsyoq" path="res://assets/textures/dailouge box.png" id="4_wm3ai"]
[ext_resource type="Texture2D" uid="uid://b51hxhp40q6nf" path="res://assets/textures/red-close-icon-free-png.webp" id="6_6rmj2"]
[ext_resource type="Texture2D" uid="uid://dmssm438nsd0h" path="res://assets/sprites/Props/potato_plant_unselected.png" id="6_cgfq5"]
[ext_resource type="Texture2D" uid="uid://bdhnowiyncdlb" path="res://assets/sprites/Props/potato_plant.png" id="6_p7vwb"]
[ext_resource type="Texture2D" uid="uid://dvieyguy7ufjk" path="res://assets/sprites/Props/carrot_plant.png" id="7_ktti3"]
[ext_resource type="Texture2D" uid="uid://d1l2fut87i7cq" path="res://assets/sprites/Props/carrot_plant_unselected.png" id="8_7dvkv"]
[ext_resource type="Script" uid="uid://rmlf103t7m3t" path="res://scenes/end_game.gd" id="10_7dvkv"]

[node name="UI" type="CanvasLayer"]

[node name="Dialogbox" parent="." instance=ExtResource("1_nt7q6")]
custom_minimum_size = Vector2(110, 50)
anchors_preset = -1
anchor_left = 0.328
anchor_top = 0.711
anchor_right = 0.721
anchor_bottom = 0.969
offset_left = 0.143982
offset_top = 0.271973
offset_right = 0.407959
offset_bottom = 0.0879517

[node name="top_left" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.025
anchor_top = 0.037
anchor_right = 0.025
anchor_bottom = 0.037
offset_left = -1.8
offset_top = -1.976
offset_right = 432.2
offset_bottom = 133.024

[node name="VFlowContainer" type="VBoxContainer" parent="top_left"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -200.0
offset_bottom = 449.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_vdcm2")

[node name="listitem" parent="top_left/VFlowContainer" instance=ExtResource("2_x4jx1")]
layout_mode = 2
metadata/name = "water"

[node name="listitem2" parent="top_left/VFlowContainer" instance=ExtResource("2_x4jx1")]
layout_mode = 2
metadata/name = "water"

[node name="listitem3" parent="top_left/VFlowContainer" instance=ExtResource("2_x4jx1")]
layout_mode = 2
metadata/name = "Love"
metadata/image_rotation = 20.0

[node name="listitem4" parent="top_left/VFlowContainer" instance=ExtResource("2_x4jx1")]
layout_mode = 2
metadata/name = "Love"
metadata/image_rotation = 20.0

[node name="listitem5" parent="top_left/VFlowContainer" instance=ExtResource("2_x4jx1")]
layout_mode = 2
metadata/name = "Love"
metadata/image_rotation = 20.0

[node name="listitem6" parent="top_left/VFlowContainer" instance=ExtResource("2_x4jx1")]
layout_mode = 2
metadata/name = "Love"
metadata/image_rotation = 20.0

[node name="listitem7" parent="top_left/VFlowContainer" instance=ExtResource("2_x4jx1")]
layout_mode = 2
metadata/name = "Love"
metadata/image_rotation = 20.0

[node name="soil_management" type="Control" parent="."]
custom_minimum_size = Vector2(770, 500)
layout_mode = 3
anchor_left = 0.166
anchor_top = 0.114
anchor_right = 0.834
anchor_bottom = 0.886
offset_left = 364.768
offset_top = 230.128
offset_right = -364.768
offset_bottom = -230.128
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_gdt2y")

[node name="background Image" type="TextureRect" parent="soil_management"]
layout_mode = 0
offset_right = 774.0
offset_bottom = 487.0
texture = ExtResource("4_wm3ai")

[node name="TextureRect" type="TextureRect" parent="soil_management"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.052
anchor_bottom = 0.08
offset_left = 692.0
offset_top = -23.0
offset_right = 754.96
offset_bottom = 26.0
texture = ExtResource("6_6rmj2")
expand_mode = 1

[node name="crop chooser" type="HBoxContainer" parent="soil_management"]
custom_minimum_size = Vector2(641, 100)
layout_mode = 0
offset_left = 83.0
offset_top = 69.0
offset_right = 724.0
offset_bottom = 203.0

[node name="potato" type="TextureButton" parent="soil_management/crop chooser"]
custom_minimum_size = Vector2(160, 100)
layout_mode = 2
texture_normal = ExtResource("6_cgfq5")
texture_focused = ExtResource("6_p7vwb")
stretch_mode = 0

[node name="carrot3" type="TextureButton" parent="soil_management/crop chooser"]
custom_minimum_size = Vector2(140, 100)
layout_mode = 2
texture_normal = ExtResource("8_7dvkv")
texture_pressed = ExtResource("7_ktti3")
texture_focused = ExtResource("7_ktti3")
stretch_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="soil_management"]
layout_mode = 2
offset_left = 65.0
offset_top = 171.0
offset_right = 720.0
offset_bottom = 295.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 40
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="soil_management/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="soil_management/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="soil_management/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Amount of Water"

[node name="water" type="HSlider" parent="soil_management/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(420, 30)
layout_mode = 2
max_value = 60.0
step = 5.0
value = 25.0
ticks_on_borders = true

[node name="waterr_amt" type="Label" parent="soil_management/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="soil_management/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="soil_management/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Amount of Fertilizers"

[node name="fertilizer" type="HSlider" parent="soil_management/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(390, 30)
layout_mode = 2
max_value = 300.0
step = 10.0
value = 120.0
ticks_on_borders = true

[node name="fertilizer_amt" type="Label" parent="soil_management/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="soil_management/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="soil_management/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Pests"

[node name="pesticide" type="OptionButton" parent="soil_management/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
item_count = 2
popup/item_0/text = "Chemical Pesticide"
popup/item_0/id = 0
popup/item_1/text = "Eco-friendly Pesticide"
popup/item_1/id = 1

[node name="Button" type="Button" parent="soil_management"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.503
anchor_top = 0.823
anchor_right = 0.503
anchor_bottom = 0.823
offset_left = -79.31
offset_top = -20.5
offset_right = 79.69
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 0
text = "Plant"

[node name="top_right" type="Control" parent="."]
custom_minimum_size = Vector2(140, 0)
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="next_week_btn" type="Button" parent="top_right"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -15.5
offset_right = 46.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Next Week"

[node name="end_game" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_7dvkv")

[node name="TextureRect" type="TextureRect" parent="end_game"]
layout_mode = 1
anchors_preset = -1
anchor_left = -13.175
anchor_top = -4.575
anchor_right = 20.875
anchor_bottom = 6.05
offset_left = -346.0
offset_top = -15.0
offset_right = -6.10352e-05
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_wm3ai")

[node name="GridContainer" type="GridContainer" parent="end_game"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -755.0
offset_top = -167.0
offset_right = 852.0
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="ready" from="top_left/VFlowContainer" to="top_left/VFlowContainer" method="_on_ready"]
[connection signal="ready" from="soil_management" to="Dialogbox" method="_on_soil_management_ready"]
[connection signal="ready" from="soil_management" to="soil_management" method="_on_ready"]
[connection signal="gui_input" from="soil_management/TextureRect" to="soil_management" method="_on_texture_rect_gui_input"]
[connection signal="changed" from="soil_management/MarginContainer/VBoxContainer/HBoxContainer/water" to="soil_management" method="_on_water_changed"]
[connection signal="value_changed" from="soil_management/MarginContainer/VBoxContainer/HBoxContainer/water" to="soil_management" method="_on_water_value_changed"]
[connection signal="value_changed" from="soil_management/MarginContainer/VBoxContainer/HBoxContainer2/fertilizer" to="soil_management" method="_on_fertilizer_value_changed"]
[connection signal="pressed" from="soil_management/Button" to="Dialogbox" method="_on_button_pressed"]
[connection signal="ready" from="end_game" to="end_game" method="_on_ready"]
