extends VBoxContainer



func _on_ready() -> void:
	$"listitem/MarginContainer/image_node/TextureRect".texture = load("res://assets/textures/images.png")
	$"listitem3/MarginContainer/image_node/TextureRect".texture = load("res://assets/textures/523835.png")
	$"listitem4/MarginContainer/image_node/TextureRect".texture = load("res://assets/textures/images (1).png")
	$"listitem5/MarginContainer/image_node/TextureRect".texture = load("res://assets/textures/calendar-date-5.png")
	$"listitem6/MarginContainer/image_node/TextureRect".texture = load("res://assets/textures/2280622-200.png")
	$"listitem7/MarginContainer/image_node/TextureRect".texture = load("res://assets/textures/5830611.png")
